# gRPC-Client-Server-Rust

./: .gitignore  README.md  SoftwareSecurity.pptx
client/: Cargo.toml
client/src/: main.rs
fuzzing/: Cargo.toml
fuzzing/in/: in1.txt  in2.txt
fuzzing/src/: main.rs  servente.rs
master/: Cargo.toml
master/fuzz/: Cargo.toml
master/src/: main.rs
server/: Cargo.toml  Dockerfile  build.rs
server/fuzz/: Cargo.toml
server/fuzz/fuzz_targets/: fuzz_target_1.rs
server/proto/: server.proto
server/src/: main.rs
