[package]
name = "fuzz-serio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs" }

[dependencies]
afl = { version = "*", features = ["reset_lazy_static"] }
tonic = "0.7.1"
prost = "*"
json = "*"
